# python-binary.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/{{ project-name }}/: pyproject.toml
contents/{{ project-name }}/src/{{ project_name }}/: __init__.py
contents/{{ project-name }}/tests/: test_hello_world.py
contents/{{ project_name_kebab }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
contents/{{ project_name_kebab }}/.github/workflows/: release.yaml  test.yaml
contents/{{ project_name_kebab }}/src/{{ project_name_snake }}/: __init__.py
contents/{{ project_name_kebab }}/tests/: test_hello_world.py
