[project]
name = "{{ project-name }}"
version = "0.1.0"
description = "{{ description }}"
readme = "README.md"
authors = [
    { name = "{{ author_name }}", email = "{{ author_email }}" }
]
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.17.0",
]

[project.scripts]
{{ project-name }} = "{{ project_name }}:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

